git commit -am "Update release auth"

--- a/frontend/src/main/resources/web/dashboard.html
+++ b/frontend/src/main/resources/web/dashboard.html
@@ -790,7 +790,7 @@
     <main class="flex-1 flex flex-col overflow-hidden">
       <header class="topbar">
         <div class="flex items-center">
-          <span class="topbar-title">Workspace</span><span class="topbar-version" id="topbar-ver">v2.1</span>
+          <span class="topbar-title">Workspace</span><span class="topbar-version" id="topbar-ver">v1.0</span>
           <div class="topbar-divider"></div>
           <span class="topbar-layout" id="topbar-host">Layout: Standard_Dev</span>
         </div>
@@ -1118,7 +1118,7 @@
               C++ Agent: httplib + nlohmann/json<br>
               Java Frontend: JavaFX WebView + HttpClient<br>
               Persistence: SQLite (smcmap.db)<br>
-              Build: SMCMAP v2.1
+              Build: SMCMAP v1.0
             </div>
           </section>
         </div>
@@ -1134,7 +1134,7 @@
         <div class="flex items-center gap-6">
           <span id="footer-uptime">UPTIME: 0D 0H 0M</span>
           <span style="color:rgba(255,255,255,0.4);cursor:pointer" onclick="javaBridge.refresh()">REFRESH</span>
-          <span style="color:rgba(255,255,255,0.2)">SMCMAP_V2.1</span>
+          <span style="color:rgba(255,255,255,0.2)">SMCMAP_v1.0</span>
         </div>
       </footer>
     </main>
